Added more instructions to the html page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body ng-app="myApp" ng-controller="myCtrl">
     <div>
-        <p>A Simple Static Tree.
+        <p>A Simple Static Tree .... Try dragging and dropping the nodes.</p>
             <h4>Tree</h4>
 
             <ul>
