--- a/topDown.html
+++ b/topDown.html
@@ -119,7 +119,7 @@
 </head>
 <body ng-app="myApp" ng-controller="myCtrl">
     <div>
-        <p>A Simple Static Tree.
+        <p>A Simple Static Tree. ... Try dragging and dropping the nodes</p>
             <h4>Tree</h4>
 
             <table border="0" cellspacing="0" cellpadding="0">
