made a little mistake with css rule for center column

--- a/topDown2.html
+++ b/topDown2.html
@@ -130,7 +130,7 @@
             stroke-width:1;
             shape-rendering:crispEdges;
         }
-        center{
+        .center{
             overflow:auto;
         }
      </style>
